--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header-index">
+    <!-- <header class="header-index">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="header-logo link" href="./index.html"
@@ -58,9 +58,9 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="main-section-button">
+      <!-- <section class="main-section-button">
         <div class="container">
           <h1 class="section-button-text">
             Effective Solutions for Your Business
@@ -69,8 +69,8 @@
             Order Service
           </button>
         </div>
-      </section>
-      <section class="section-intermedia">
+      </section> -->
+      <!-- <section class="section-intermedia">
         <div class="container intermedia-container">
           <h2 class="hidden-section visually-hidden" hidden>section2</h2>
           <ul class="intermedia-list list">
@@ -124,8 +124,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section-hover">
+      </section> -->
+      <!-- <section class="section-hover">
         <div class="container hover-container">
           <h2 class="hover">What are we doing</h2>
           <ul class="hover-list list">
@@ -158,7 +158,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <section class="section-team">
         <div class="container team-container">
           <h2 class="team">Our Team</h2>
@@ -418,7 +418,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-customers">
+      <!-- <section class="section-customers">
         <div class="container container-cusromers">
           <h2 class="customers">Customers</h2>
           <ul class="customers-list list">
@@ -496,9 +496,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="index-footer">
+    <!-- <footer class="index-footer">
       <div class="container footer-container">
         <div class="index-container">
           <a class="footer-logo link" href="./index.html"
@@ -582,8 +582,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -666,7 +666,7 @@
           <button type="submit" class="modal-button">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
