--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="container hover-container">
           <h2 class="hover">What are we doing</h2>
           <ul class="hover-list list">
-            <li class="hover">
+            <li class="hover-item">
               <img
                 class="hover-img"
                 src="./images/section-2-img-1.jpg"
@@ -233,7 +233,7 @@
                 height="300"
               />
             </li>
-            <li class="hover">
+            <li class="hover-item">
               <img
                 class="hover-img"
                 src="./images/section-2-img-2.jpg"
@@ -242,7 +242,7 @@
                 height="300"
               />
             </li>
-            <li class="hover">
+            <li class="hover-item">
               <img
                 class="hover-img"
                 src="./images/section-2-img-3.jpg"
