--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     </header>
     <main>
       <section class="filters">
-        <div class="container">
+        <div class="container filters-container">
           <h1 class="filters-hedden visually-hidden" hidden>filters</h1>
           <ul class="filters-list list">
             <li class="filters-item">
