--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </li>
           </ul>
         </address>
-        <button class="menu-open-button" type="button" js-open-menu>
+        <button class="menu-open-button js-open-menu" type="button">
           <svg class="menu-open-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-charm_menu-hamburger-1"></use>
           </svg>
@@ -673,9 +673,9 @@
         </form>
       </div>
     </div>
-    <div class="mob-menu is-hidden" js-menu-container>
+    <div class="mob-menu js-menu-container" id="mobile-menu">
       <div>
-        <button class="menu-close-button" type="button" js-close-menu>
+        <button class="menu-close-button js-close-menu" type="button">
           <svg class="menu-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
