--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </address>
         <button class="menu-open-button js-open-menu" type="button">
           <svg class="menu-open-icon" width="32" height="22">
-            <use href="./images/icons.svg#icon-charm_menu-hamburger-1"></use>
+            <use href="./images/icons.svg#icon-menu-hamburger"></use>
           </svg>
         </button>
       </div>
