--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,11 @@
             </li>
           </ul>
         </address>
+        <button class="menu-open-button js-open-menu" type="button">
+          <svg class="menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-menu-hamburger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -367,5 +372,94 @@
         </div>
       </div>
     </footer>
+    <div class="mob-menu js-menu-container" id="mobile-menu">
+      <div>
+        <button class="menu-close-button js-close-menu" type="button">
+          <svg class="menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <nav class="mob-page-nav">
+          <ul class="mob-menu-list list">
+            <li class="mob-menu-item">
+              <a class="mob-menu-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="mob-menu-item">
+              <a class="mob-menu-link link active" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="mob-menu-item">
+              <a class="mob-menu-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div>
+        <address class="mob-address">
+          <ul class="mob-address-list list">
+            <li class="mob-address-item">
+              <a class="mob-address-link tell link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mob-address-item">
+              <a
+                class="mob-address-link mail link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="mob-soc-list list">
+          <li class="footer-soc-item">
+            <a
+              href=""
+              class="footer-soc-link link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="soc-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a
+              href=""
+              class="footer-soc-link link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="soc-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a
+              href=""
+              class="footer-soc-link link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="soc-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a
+              href=""
+              class="footer-soc-link link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><svg class="soc-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
