--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </section>
       <section class="section-hover">
         <div class="container hover-container">
-          <h2 class="hover">What are we doing</h2>
+          <h2 class="hover-titel">What are we doing</h2>
           <ul class="hover-list list">
             <li class="hover">
               <img
@@ -662,7 +662,7 @@
             <label for="user-privacy" class="checkbox-label"
               ><span class="label-span">
                 <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-property-1click"></use>
+                  <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
