--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <li class="team-item">
               <img
                 class="team-img"
-                srcset="./images/team-1.jpg 1x, ./images/team-1@2x.jpg 2x"
+                srcset="./images/team-1.jpg 1x, ./images/team-1.jpg 2x"
                 src="./images/team-1.jpg"
                 alt="team"
                 width="264"
@@ -236,7 +236,7 @@
             <li class="team-item">
               <img
                 class="team-img"
-                srcset="./images/team-2.jpg 1x, ./images/team-2@2x.jpg 2x"
+                srcset="./images/team-2.jpg 1x, ./images/team-2.jpg 2x"
                 src="./images/team-2.jpg"
                 alt="team"
                 width="264"
@@ -300,7 +300,7 @@
             <li class="team-item">
               <img
                 class="team-img"
-                srcset="./images/team-3.jpg 1x, ./images/team-3@2x.jpg 2x"
+                srcset="./images/team-3.jpg 1x, ./images/team-3.jpg 2x"
                 src="./images/team-3.jpg"
                 alt="team"
                 width="264"
@@ -365,7 +365,7 @@
               <img
                 class="team-img"
                 src="./images/team-4.jpg"
-                srcset="./images/team-4.jpg 1x, ./images/team-4@2x.jpg 2x"
+                srcset="./images/team-4.jpg 1x, ./images/team-4.jpg 2x"
                 alt="team"
                 width="264"
                 height="260"
